--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -1,6 +1,6 @@
 footer.footer
     .footer__logo
-        //- img(src='/img/logo-green.png' alt='Tourbyte logo')
+        //- img(src='/img/logo-green.png' alt='tourbyte logo')
     ul.footer__nav
         li: a(href='#') About us
         li: a(href='#') API
