--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -4,6 +4,6 @@ footer.footer
     ul.footer__nav
         li: a(href='#') About us
         li: a(href='#') API
-        li: a(href='#') Github
+        li: a(href='https://github.com/devanshu-raj/tourbyte') Github
         li: a(href='#') Become a guide
     p.footer__copyright &copy; Devanshu Raj
