--- a/views/email/welcome.pug
+++ b/views/email/welcome.pug
@@ -2,7 +2,7 @@ extends baseEmail
 
 block content
     p Hi #{firstName},
-    p Welcome to Tourbyte, we're glad to have you here!
+    p Welcome to Tourbyte, we're glad to have you here! 🥳
     p We're all a big family here, so make sure to upload your user photo so we get to know you a bit better!
     table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
         tbody
